# Polymarket-Copytrade

./: Cargo.toml  readme.md  target.csv
src/: main.rs
src/helpers/: approvals.rs  checker.rs  make_trade.rs  mod.rs
