[package]
name = "pmcopytrade"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
tokio-tungstenite = {version = "*", features = ["native-tls"]}
serde_json = "1.0.148"
serde = {version = "1.0.228", features = ["derive"]}
alloy = { version = "1.2.1", features = ["full"] }
polymarket-client-sdk = "0.2.0"
dotenv = "0.15.0"
rust_decimal = "1.39.0"
rust_decimal_macros = "1.39.0"
csv = "1.4.0"
eyre = "0.6"
async-trait = "0.1"
